# serializer version: 1
# name: test_r4_asmaddr2_bf16_srvw_golden
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_UserArgs_MT128x128x16c5w2e-xMbRRvzpAuGp9L_eiIf2bpro8d44oBne9RV2k=',
      'err': 0,
    }),
  ])
# ---
# name: test_r4_asmaddr2_fp32_golden
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT64x256x16_MI16x16xjP_ThEP259JhTD56yzQuH0dWijzTW1cfd3sL9uvkA4o=',
      'err': 0,
    }),
  ])
# ---
